--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div id="banner-content" class="row clearfix">
           <div class="col-38">
             <div class="section-heading">
-              <h1>SUDIP SIGDEL</h1>
+              <h1>HARI SAPKOTA</h1>
               <h2>
                 Innovative and deadline-driven web developer, designing and
                 developing user-centered website from initial concept to final,
