--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                   color: #fff;
                 }
               "
-              >Sudip</a
+              >Hari</a
             >
             - All Rights Reserved.
           </p>
